# nordic-probai-2024

./: .Rhistory  pyproject.toml
.virtual_documents/day4/: CourseScript_probAI.ipynb
day1/Silja Renooij/: DIY-LinearRegressionML.ipynb  DIY-MontyHall.ipynb
day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-II/notebooks/: bayesian_linear_regression.ipynb  students_bayesian_logistic_regression.ipynb
day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-II/notebooks/.ipynb_checkpoints/: students_bayesian_logistic_regression-checkpoint.ipynb
day2/Thomas D. Nielsen Andrés Masegosa Helge Langseth/Session-III/notebooks/.ipynb_checkpoints/: students_VAE-checkpoint.ipynb
day3/Jes Frellsen/: 1-VAE.ipynb
day4/.ipynb_checkpoints/: CourseScript_probAI-checkpoint.ipynb
day4/model/: linear  linear.stan  linear_intercept  linear_intercept.stan
day5/: GPS_for_Reg_and_Class.ipynb
