[tool.poetry]
name = "nordic-probai-2024"
version = "0.1.0"
description = ""
authors = ["Helge Langseth"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
graphviz = "^0.20.3"
gpytorch = "^1.11"
matplotlib = "^3.8.2"
pgmpy = "^0.1.25"
pyro-ppl = "^1.9.1"
torch = "^2.3.1"
torchvision = "^0.18.1"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.9.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
